tuning jvm memory param